force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/Krow__Klient_Survey_Schedule__c.object-meta.xml
<CustomObject>
    <description>To store Klient Survey Scheduler Details.</description>
    <label>Klient Survey Schedule</label>
    <nameField>
        <label>Klient Survey Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Klient Survey Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>