force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Active__c.field-meta.xml
<CustomField>
    <fullName>Krow__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To activate and deactivate Scheduler</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>