force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>Krow__Additional_Email__c</fullName>
    <description>To add comma separated Additional Email Addresses.</description>
    <label>Additional Email</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>