force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Archived__c.field-meta.xml
<CustomField>
    <fullName>Krow__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to archive Klient Survey Scheduler.</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>