force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Archived_Klient_Survey_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Krow__Archived_Klient_Survey_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used to store cloned Klient Survey Schedule Id that is archived.</description>
    <label>Archived Klient Survey Schedule</label>
    <referenceTo>Krow__Klient_Survey_Schedule__c</referenceTo>
    <relationshipLabel>Klient Survey Schedules</relationshipLabel>
    <relationshipName>Klient_Survey_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>