force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Criteria_Condition__c.field-meta.xml
<CustomField>
    <fullName>Krow__Criteria_Condition__c</fullName>
    <description>used to add criteria Condition.</description>
    <label>Criteria Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All of the conditions are met (AND)</fullName>
            </value>
            <value>
                <fullName>Any of the conditions are met (OR)</fullName>
            </value>
            <value>
                <fullName>Custom Logic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>