force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__CustomLogic__c.field-meta.xml
<CustomField>
    <fullName>Krow__CustomLogic__c</fullName>
    <label>Custom Logic</label>
    <length>260</length>
    <type>LongTextArea</type>
</CustomField>