force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Krow__Email_Template__c</fullName>
    <description>used to store Email Template Id.</description>
    <label>Email Template</label>
    <length>26</length>
    <type>Text</type>
</CustomField>