force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Email_Template_For_Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>Krow__Email_Template_For_Additional_Email__c</fullName>
    <description>used to store Email Template Id for Additional Email.</description>
    <label>Email Template For Additional Email</label>
    <length>26</length>
    <type>Text</type>
</CustomField>