force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Krow__Error_Message__c</fullName>
    <description>This field is used to show Error Message related to Klient Survey Scheduler.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>