force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Interval__c.field-meta.xml
<CustomField>
    <fullName>Krow__Interval__c</fullName>
    <description>This field is used to store Interval for Sending Surveys.</description>
    <label>Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>