force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Last_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Last_Survey_Sent__c</fullName>
    <description>to store Last Survey Sent dateTime from Scheduler.</description>
    <label>Last Survey Sent</label>
    <type>DateTime</type>
</CustomField>