force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Next_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Next_Survey_Sent__c</fullName>
    <description>to store Next Survey Sent dateTime from Scheduler.</description>
    <label>Next Survey Sent</label>
    <type>DateTime</type>
</CustomField>