force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Number_of_Account_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Krow__Number_of_Account_Scheduled__c</fullName>
    <description>Number of account related records in scheduled Klient Survey.</description>
    <label>Number of Account Scheduled</label>
    <summaryFilterItems>
        <field>Krow__Scheduled_Klient_Survey__c.Krow__Type__c</field>
        <operation>equals</operation>
        <value>Account</value>
    </summaryFilterItems>
    <summaryForeignKey>Krow__Scheduled_Klient_Survey__c.Krow__Klient_Survey_Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>