force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Object_For_Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>Krow__Object_For_Send_Survey__c</fullName>
    <description>used to store object for Sending Survey.</description>
    <label>Object For Send Survey</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>