force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Org_wide_Email_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Org_wide_Email_Address_Id__c</fullName>
    <description>used to store Org-wide Email Address Id.</description>
    <label>Org-wide Email Address Id</label>
    <length>26</length>
    <type>Text</type>
</CustomField>