force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__Process_Status__c</fullName>
    <description>We are using this field to store the record status.</description>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>