force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Recurrence_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Recurrence_End_Date__c</fullName>
    <description>used to store Recurrence End DateTime.</description>
    <label>Recurrence End Date</label>
    <type>DateTime</type>
</CustomField>