force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Recurrence_Frequency_JSON__c.field-meta.xml
<CustomField>
    <fullName>Krow__Recurrence_Frequency_JSON__c</fullName>
    <description>used to store Recurrence Frequency JSON.</description>
    <label>Recurrence Frequency JSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>