force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Recurrence_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Recurrence_Start_Date__c</fullName>
    <description>used to store Recurrence Start DateTime.</description>
    <label>Recurrence Start Date</label>
    <type>DateTime</type>
</CustomField>