force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Reference_Date_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Reference_Date_Field_Name__c</fullName>
    <description>This field is used to store reference date field name for sending Surveys in Intervals.</description>
    <label>Reference Date Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>