force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Scheduler_Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__Scheduler_Status__c</fullName>
    <description>used to store Scheduler Status like In Progress, Queue or Completed.</description>
    <label>Scheduler Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>