force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Selected_Roles_and_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Krow__Selected_Roles_and_Recipients__c</fullName>
    <description>Comma Separated Roles and Recipients</description>
    <label>Selected Roles and Recipients</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>