force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Send_Once__c.field-meta.xml
<CustomField>
    <fullName>Krow__Send_Once__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to check if Scheduler send Survey once or not.</description>
    <label>Send Once</label>
    <type>Checkbox</type>
</CustomField>