force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Send_Survey_To__c.field-meta.xml
<CustomField>
    <fullName>Krow__Send_Survey_To__c</fullName>
    <description>to whom surveys will be sent.</description>
    <label>Send Survey To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Account Contacts</fullName>
            </value>
            <value>
                <fullName>Project Related Contact Field(s)</fullName>
            </value>
            <value>
                <fullName>Account Contact(s) with specific role(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>