force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Survey__c.field-meta.xml
<CustomField>
    <fullName>Krow__Survey__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>used to store Survey Id.</description>
    <label>Survey</label>
    <referenceTo>Krow__Survey__c</referenceTo>
    <relationshipLabel>Klient Survey Schedules</relationshipLabel>
    <relationshipName>Klient_Survey_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>