force-app/main/default/objects/Krow__Klient_Survey_Schedule__c/fields/Krow__Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to check if more surveys will be sent or not from particular Scheduler.</description>
    <label>Survey Sent</label>
    <type>Checkbox</type>
</CustomField>